--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>Resorte</title>
 </head>
 <body>
-    <script src="main.js" type="module"></script>
+    <script src="main2.js" type="module"></script>
 </body>
 </html>
